# Vocari_RPG

./: .gitignore  README.md  todo.txt
world/: MIGRATION_GUIDE.md  embeddings.py  main.py  prompt.txt  pyproject.toml  validations_needed.txt
world/documents/: Spanish-001-mva-1543005870.xml
world/generators/: __init__.py  base_generator.py  game_generator.py  item_generator.py  level_progression.py  lore_generator.py  map_generator.py  models.py  npc_generator.py  quest_generator.py  quest_validator.py  skill_generator.py  trigger_generator.py  trigger_validator.py  tutor_generator.py  world_orchestrator.py
world/output/n-english-t-spanish/v1/: embeddings_metadata.json  lore.json  map.json  npcs.json  quests.json
world/output/n-english-t-spanish/v10/: items.json  lore.json  map.json  npcs.json  quests.json
world/output/n-english-t-spanish/v11/: embeddings_metadata.json  items.json  lore.json  map.json  npcs.json  quests.json
world/output/n-english-t-spanish/v12/: games.json  items.json  level_progression.json  lore.json  map.json  npcs.json  quests.json  skills.json  triggers.json  tutor.json
world/output/n-english-t-spanish/v13/: items.json  level_progression.json  lore.json  map.json  npcs.json  quests.json  skills.json  triggers.json  tutor.json
world/output/n-english-t-spanish/v14/: games.json  items.json  level_progression.json  lore.json  map.json  npcs.json  quests.json  skills.json  triggers.json  tutor.json
world/output/n-english-t-spanish/v17/: embeddings.pkl  (+4 more)
world/tests/: __init__.py  test_quest_validator.py  test_trigger_validation.py
(+79 files in other folders)
