[project]
name = "rpg-world-generator"
version = "0.1.0"
description = "Language Learning RPG World Generator - Creates immersive RPG worlds for language learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
rpg-world = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generators"]
include = ["main.py", "embeddings.py"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
